# SensorApp

./: .gitignore  pyproject.toml
src/sensorapp/: main.py
src/sensorapp/models/: app_state.py
src/sensorapp/models/sensors/: modbus_sensors_library.py  sdi_12_sensors_library.py  sensor.py  utilites.py  wire_color.py
src/sensorapp/observers/: base.py
src/sensorapp/services/: client.py  logging_system.py
src/sensorapp/views/: logging_frame.py  main_app.py  sensor_id_test_notebook.py  sensor_selection_notebook.py  sensor_settings_frame.py
