[project]
authors = [
  {name = "Insolight"}
]
name = "sensorApp"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["types-pyserial>=3.5.0.20251001,<4"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
sensorapp = { path = ".", editable = true }

[tool.pixi.tasks]
start = "python -m src.sensorapp.main"

[tool.pixi.dependencies]
pymodbus = "3.5.4.*"
tqdm = ">=4.67.1,<5"
progress = ">=1.6.1,<2"
